[package]
name = "wasm-slither"
version = "0.1.0"
authors = ["vilayat-ali <vilayatcodemysite@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.68", features = ["console"] }
getrandom = { version = "0.2.12", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
